--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link href="css/main.css" rel="stylesheet">
 </head>
 <body>   
-  
+<div class="grid">
+  <div class="unit unit-s-1 unit-s-centered island">
+    <h1 class="yotta">Berries</h1>
+  </div>  
   <script src="js/main.js"></script>  
 </body>
 </html>
